# system-config-network

./: .cvsignore  .gitignore  .project  .pydevproject  ChangeLog  Makefile.am  Makefile.inc  TODO  acinclude.m4  autoclean.sh  autogen.sh  config.h.in  configure.in  internet-druid.console  internet-druid.desktop  internet-druid.desktop.in  intltool-extract.in  intltool-merge.in  intltool-update.in  intltool.patch  neat-control.desktop  neat-control.desktop.in  neat.console  neat.desktop  neat.desktop.in  neat.pam  netconf.spec  pycheckrc  pylintrc  rcs2log  redhat-config-network-0.9.13-neat.patch  redhat-config-network-0.9.21-rp3.patch  redhat-config-network-0.9.23-rp3-font.patch  redhat-config-network-0.9.24-rp3-isdn.patch  redhat-config-network-cmd.console  redhat-config-network.sh  redhat-config-network.spec  redhat-config-network.spec.in  system-config-network-cmd.console  system-config-network.console  (+4 more)
.tx/: config
autom4te.cache/: .cvsignore
doc/: Makefile.am  chapter-network-config-isdn.html  configurationfiles.txt  detailed_spec  index.html  intro.html  legalnotice.html  network-aliases.html  network-config-activate.html  network-config-cipe.html  network-config-dns.html  network-config-ethernet.html  network-config-hosts.html  network-config-isdn.html  network-config-modem.html  network-config-qeth.html  network-config-tokenring.html  network-config-wireless.html  network-config-xdsl.html  network-profiles.html  overview
doc/figs/: Makefile.am
doc/figs/networkconfig/: Makefile.am
doc/images/: Makefile.am
doc/stylesheet-images/: Makefile.am
src/: .cvsignore  Address.py  ConfiguredDevice.py  Device.py  DeviceList.idl  EthernetDevice.py  EthernetInterface.py  FirewallDruid.py  HardwareList.idl  InterfaceCreator.py  MainWindow.py  Makefile  Makefile.am  Makefile.inc  NetworkList.idl  ProfileList.idl  Resolver.py  basicdialog.glade  basicdialog.py  cipeconfig.glade  dialupconfig.glade  dialupconfig.py  dslconfig.glade  dslconfig.py  editadress.glade  ethernetconfig.glade  ethernetconfig.py  ethernethardware.glade  firewall-druids.glade  genClass.py  glade-strings.c  ipcalc.py  isdnhardware.py  isdnup  maindialog.glade  mainwindow.glade  modemconfig.glade  modemconfig.py  module-info  neat-control.glade  (+19 more)
src/control/: display.glade  functions.py  maindialog.glade  monitordialog.glade  neat-control.py  popupmenu.glade  properties.glade  propertiesdialog.glade
src/control/pixmaps/: control.xpm  off.xpm  on.xpm
src/doc/: Address.html  Device.html  EthernetDevice.html  Makefile.am  ipcalc.html
src/netconfpkg/: .cvsignore  .gitignore  ADSLInterface.py  ADSLInterfaceDruid.glade  CheckList.py  Conf.py  ConfPAP.py  ConfSMB.py  Control.py  DeviceList.idl  DialupDruid.glade  DialupDruid.py  EthernetHardwareDruid.glade  EthernetHardwareDruid.py  Firewall.idl  HardwareList.idl  IPsecList.idl  InterfaceCreator.py  IsdnInterface.py  Makefile.am  ModemDruid.glade  ModemInterface.py  NCAliasList.py  NCBackendHal.py  NCCallback.py  NCCard.py  NCCipe.py  NCCompression.py  NCDevADSL.py  NCDevCipe.py  NCDevEthernet.py  NCDevIsdn.py  NCDevIsdnRaw.py  NCDevModem.py  NCDevTokenRing.py  NCDevWireless.py  NCDevice.py  NCDeviceFactory.py  NCDeviceList.py  NCDialup.py  (+73 more)
src/netconfpkg/conf/: Conf.py  ConfChat.py  ConfEResolv.py  ConfESNetwork.py  ConfESStaticRoutes.py  ConfModules.py  ConfPAP.py  ConfPasswd.py  ConfSMB.py  ConfShellVar.py  ConfSysctl.py  Makefile.am  __init__.py
src/netconfpkg/gui/: ADSLInterface.py  ADSLInterfaceDialog.glade  ADSLInterfaceDialog.py  ADSLInterfaceDruid.glade  ADSLInterfaceDruid.py  CTCInterface.py  CTCInterfaceDialog.py  CTCInterfaceDruid.py  CipeInterface.py  CipeInterfaceDialog.glade  CipeInterfaceDialog.py  CipeInterfaceDruid.glade  DeviceConfigDialog.py  DeviceTypeDialog.py  DialupDruid.glade  DialupDruid.py  DialupInterfaceDialog.glade  DialupInterfaceDialog.py  EthernetHardwareDruid.glade  EthernetHardwareDruid.py  EthernetInterface.py  EthernetInterfaceDruid.glade  GUI_functions.py  GenericInterface.py  GenericInterfaceDruid.glade  HardwareDialog.py  IUCVInterface.py  InterfaceCreator.py  IsdnHardwareDruid.glade  IsdnInterface.py  IsdnRawInterface.py  LcsConfig.py  LcsHardware.py  LcsHardwareDruid.py  LcsInterfaceDruid.py  Makefile.am  ModemDruid.glade  ModemInterface.py  NCPluginADSLInterfaceDialog.py  NCPluginADSLInterfaceDruid.py  (+97 more)
src/netconfpkg/plugins/: Makefile.am  NCDevADSL.py  NCDevCTC.py  NCDevCipe.py  NCDevEthernet.py  NCDevIUCV.py  NCDevIsdn.py  NCDevLcs.py  NCDevModem.py  NCDevQeth.py  NCDevTokenRing.py  NCDevWireless.py  NCHWCTC.py  NCHWEthernet.py  NCHWIUCV.py  NCHWIsdn.py  NCHWLcs.py  NCHWModem.py  NCHWQeth.py  NCHWTokenring.py  NCHWWireless.py  NCPluginDevADSL.py  NCPluginDevEthernet.py  NCPluginDevIsdn.py  NCPluginDevModem.py  NCPluginDevQeth.py  NCPluginDevTokenRing.py  NCPluginDevWireless.py  NCPluginHWEthernet.py  NCPluginHWIsdn.py  NCPluginHWModem.py  NCPluginHWQeth.py  NCPluginHWTokenring.py  NCPluginHWWireless.py  __init__.py
src/netconfpkg/tests/: .gitignore  Makefile.am  basic.tar  coverage.py  hosts  hosts2  test-Conf.py  test-gui-manual.py  test-gui.py  test-hosts.py  test-rcn.py
src/netconfpkg/tests/etc/: resolv.conf
src/netconfpkg/tests/etc/ppp/: chap-secrets  pap-secrets
src/netconfpkg/tests/etc/sysconfig/: network
src/netconfpkg/tests/etc/sysconfig/network-scripts/: ifcfg-eth0
src/netconfpkg/tests/test-root/etc/: hosts  modprobe.conf  sysctl.conf  wvdial.conf
src/netconfpkg/tests/test-root/etc/ppp/: chap-secrets  pap-secrets
src/netconfpkg/tests/test-root/etc/ppp/peers/: 1net4you
src/netconfpkg/tests/test-root/etc/sysconfig/: isdncard  network
src/netconfpkg/tests/test-root/etc/sysconfig/networking/devices/: ifcfg-eth0  ifcfg-tr0
src/netconfpkg/tui/: Makefile.am  NCEthernetInterface.py  NCIsdnInterface.py  NCLcsInterface.py  NCModemInterface.py  NCPluginDNS.py  NCPluginDevices.py  NCPluginEthernetInterface.py  NCPluginIsdnInterface.py  NCPluginModemInterface.py  NCPluginQethInterface.py  NCPluginTokenRingInterface.py  NCQethInterface.py  NCTcpIp.py  __init__.py
src/pixmaps/: Makefile.am
(+117 files in other folders)
