AC_INIT(./aclocal.m4)

MAJOR=1
MINOR=5
RELEASE=1

RPM_RELEASE=1

AM_INIT_AUTOMAKE(system-config-network, $MAJOR.$MINOR.$RELEASE)

ALL_LINGUAS="ar as be bg bn_IN bn bs ca cs cy da de el en_GB es et fa fi fr gu he hi hr hu hy id is it ja ka kn ko ku lo mk ml mr ms my nb nl no or pa pl pt_BR pt ro ru si sk sl sq sr ta te tr uk ur vi zh_CN zh_TW"


AM_PATH_PYTHON

dnl prevent to copy po/Makefile.in.in
GETTEXT_PACKAGE=system-config-network
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
AC_PROG_INTLTOOL
AC_PROG_LN_S

perl -e 'print "PRG_TRANSLATORS = [[\n";LINE:;while(<>) { if (/^# (.*<.*>)/) { print "  \"$1\",\n";}};print "]]\n"' $srcdir/po/*.po > ./translators.txt
AC_SUBST_FILE(PRG_TRANSLATORS)dnl
PRG_TRANSLATORS=./translators.txt

AC_SUBST(RPM_RELEASE)

AC_OUTPUT([
Makefile
config.h
m4/Makefile
doc/Makefile
doc/figs/Makefile
doc/stylesheet-images/Makefile
src/Makefile
src/pixmaps/Makefile
src/netconfpkg/Makefile
src/netconfpkg/tests/Makefile
src/netconfpkg/plugins/Makefile
src/netconfpkg/gui/Makefile
src/netconfpkg/tui/Makefile
src/netconfpkg/conf/Makefile
src/version.py
system-config-network.spec
po/Makefile.in
])

