AC_INIT([system-config-network], [1.5.4])
RPM_RELEASE=1
AC_CONFIG_SRCDIR([src/netconf.py])
AM_INIT_AUTOMAKE([1.9 tar-ustar no-define foreign dist-bzip2])

ALL_LINGUAS="ar as be bg bn_IN bn bs ca cs cy da de el en_GB es et fa fi fr gu he hi hr hu hy id is it ja ka kn ko ku lo mk ml mr ms my nb nl no or pa pl pt_BR pt ro ru si sk sl sq sr sr@latin ta te tr uk ur vi zh_CN zh_TW"


AM_PATH_PYTHON

dnl prevent to copy po/Makefile.in.in
GETTEXT_PACKAGE=system-config-network
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT
AC_PROG_INTLTOOL
AC_PROG_LN_S

perl -e 'print "PRG_TRANSLATORS = [[\n";LINE:;while(<>) { if (/^# (.*<.*>)/) { print "  \"$1\",\n";}};print "]]\n"' $srcdir/po/*.po > ./translators.txt
AC_SUBST_FILE(PRG_TRANSLATORS)dnl
PRG_TRANSLATORS=./translators.txt

AC_SUBST(RPM_RELEASE)

AC_OUTPUT([
Makefile
config.h
m4/Makefile
doc/Makefile
doc/figs/Makefile
doc/stylesheet-images/Makefile
src/Makefile
src/pixmaps/Makefile
src/netconfpkg/Makefile
src/netconfpkg/tests/Makefile
src/netconfpkg/plugins/Makefile
src/netconfpkg/gui/Makefile
src/netconfpkg/tui/Makefile
src/netconfpkg/conf/Makefile
src/version.py
system-config-network.spec
po/Makefile.in
])

