SUBDIRS =  stylesheet-images figs
docdir     = $(datadir)/redhat-config-network/help
doc_DATA   = chapter-network-config-isdn.html \
	index.html \
	intro.html \
	legalnotice.html \
	network-config-activate.html \
	network-config-cipe.html \
	network-config-dns.html \
	network-config-ethernet.html \
	network-config-hosts.html \
	network-config-isdn.html \
	network-config-modem.html \
	network-config-tokenring.html \
	network-config-wireless.html \
	network-config-xdsl.html

EXTRA_DIST = configurationfiles.txt detailed_spec overview \
	$(doc_DATA)
