doc_DATA   =  neat-cipe.png \
        neat-cipe-settings.png \
        neat-dns.png \
        neat-ethernet.png \
        neat-ethernet-settings.png \
        neat-hardware.png \
        neat-hosts.png \
        neat-isdn.png \
        neat-isdn-settings.png \
        neat-modem.png \
        neat-modem-settings.png \
        neat-tokenring.png \
        neat-tokenring-settings.png \
        neat-wireless.png \
        neat-wireless-settings.png \
        neat-xdsl.png \
        neat-xdsl-settings.png \
	rhlogo.png
EXTRA_DIST =  $(doc_DATA)
