netconfimgdir = $(pkgdatadir)/pixmaps

netconfimg_DATA = \
	active.xpm \
	city.xpm \
	de.xpm \
	inactive.xpm \
	isp.xpm \
	keys.xpm \
	network.xpm \
	no.xpm \
	si.xpm \
	us.xpm \
	uk.xpm \
	nameresolution_alias.png \
	connection-ethernet.png \
	network.png

netconfkontroldir = $(datadir)/kontrol-panel/icons

netconfkontrol_DATA = neat.png

netconfpixmapdir = $(datadir)/pixmaps

netconfpixmap_DATA = neat.png

EXTRA_DIST = $(netconfimg_DATA) $(netconfkontrol_DATA) $(netconfpixmap_DATA)
