netconfimgdir = $(pkgdatadir)/pixmaps

netconfimg_DATA = \
	active.xpm \
	city.xpm \
	de.xpm \
	inactive.xpm \
	isp.xpm \
	keys.xpm \
	network.xpm \
	no.xpm \
	si.xpm \
	us.xpm \
	uk.xpm \
	nameresolution_alias.png \
	connection-ethernet.png \
	network.png \
	neat-control.png \
	blue_empty_led.xpm control.xpm isdn.xpm off.xpm plip.xpm red_empty_led.xpm \
	blue_led.xpm ethernet.xpm loopback.xpm on.xpm ppp.xpm red_led.xpm

netconfkontroldir = $(datadir)/kontrol-panel/icons

netconfkontrol_DATA = neat.png neat-control.png

netconfpixmapdir = $(datadir)/pixmaps

netconfpixmap_DATA = neat.png neat-control.png

EXTRA_DIST = $(netconfimg_DATA) $(netconfkontrol_DATA) $(netconfpixmap_DATA)
